# freeciv-project

./: .autotools  .cproject  .gitignore  .project  Makefile  Makefile.in  README  aclocal.m4  civ.serv  config.status  configure  configure.ac  fc_config.h  fc_config.h.in  fcgui  fcser  freeciv.spec  libtool  rank  reload_mcts.serv  split_timings.py  time_log.txt
ai/: Makefile  Makefile.am  Makefile.in  aitraits.lo  libaicommon.la
ai/mcts/: Makefile  Makefile.am  Makefile.in  libmcts.la  libmctsai.la  mcts.c  mcts.h  mcts.lo  mcts_config.h  mcts_node.c  mcts_node.c.txt  mcts_node.h  mcts_node.h.txt  mcts_node.lo  mcts_pruning.c  mcts_pruning.h  mcts_pruning.lo  mcts_queue.c.txt  mcts_queue.h.txt  mcts_state.h
ai/mcts/.deps/: mcts.Plo  mcts_node.Plo  mcts_pruning.Plo
ai/mcts/.libs/: libmctsai.la
ai/random/: Makefile  Makefile.am  Makefile.in  aiRandom.c  aiRandom.h  aiRandom.lo  fc_ai_random.la  librandomai.la  raisettler.c  raisettler.h  raisettler.lo  raiunit.c  raiunit.h  raiunit.lo  randomai.c  randomai.h  randomai.lo
ai/random/.deps/: aiRandom.Plo  raisettler.Plo  raiunit.Plo  randomai.Plo
ai/random/.libs/: fc_ai_random.la  fc_ai_random.lai  librandomai.la
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
client/: Makefile  Makefile.am  Makefile.in  attribute.lo  audio.lo  audio_none.lo  chatline_common.lo  citydlg_common.lo  cityrepdata.lo  client_main.lo  climap.lo  climisc.lo  clinet.lo  colors_common.lo  connectdlg_common.lo  control.lo  editor.lo  ggzclient.lo  global_worklist.lo  goto.lo  helpdata.lo  libfcgui-gtk2.la  libfcgui-gtk3.la  luaconsole_common.lo  mapctrl_common.lo  mapview_common.lo  messagewin_common.lo  options.lo  overview_common.lo  packhand.lo  packhand_gen.lo  plrdlg_common.lo  repodlgs_common.lo  reqtree.lo  servers.lo  text.lo  themes_common.lo  tilespec.lo  unitselect_common.lo  update_queue.lo  (+1 more)
common/: Makefile  Makefile.am  Makefile.in  ai.lo  base.lo  borders.lo  capstr.lo  citizens.lo  city.lo  combat.lo  connection.lo  game.c  (+42 more)
(+1061 files in other folders)
